[project]
name = "{{ pack_id }}"
version = "0.1.0"
description = "AUTHOR-FILL: short description of what this {{ kind }} pack does."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "AUTHOR-FILL: e.g., Proprietary or Apache-2.0" }
authors = [
    { name = "AUTHOR-FILL: your name", email = "AUTHOR-FILL: you@example.com" },
]

dependencies = [
    # AUTHOR-FILL: bump to the AgentOS tag your pack targets.
    "cognic-agentos @ git+https://github.com/bmzee/cognic-agentos@v0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[project.entry-points."{{ entry_point_group }}"]
{{ pack_name }} = "{{ module_name }}.{{ kind }}:{{ class_name }}"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ module_name }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
