[project]
name = "{{ pack_id }}"
version = "0.1.0"
description = "AUTHOR-FILL: short description of what this {{ kind }} pack does."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "AUTHOR-FILL: e.g., Proprietary or Apache-2.0" }
authors = [
    { name = "AUTHOR-FILL: your name", email = "AUTHOR-FILL: you@example.com" },
]

dependencies = [
    "mcp==1.27.0",
    "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    # AgentOS authoring/governance CLI — author/CI-time only (validate/sign/verify).
    "cognic-agentos @ git+https://github.com/bmzee/cognic-agentos@v0.0.2",
]

[project.entry-points."{{ entry_point_group }}"]
{{ pack_name }} = "{{ module_name }}:SERVER_DESCRIPTOR"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ module_name }}"]

[tool.hatch.build.targets.wheel.force-include]
"cognic-pack-manifest.toml" = "{{ module_name }}/cognic-pack-manifest.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
